[Mac] End AppNap activity in destructor

Previously we were relying on the fact that renderers background before
closing. This isn't true for all child processes, so check if an
activity assertion still exists in AppNapActivity's destructor, and if
so, end it.

Bug: 752239
Change-Id: I82fe02fec756926527a2b8acc523f325c6685669
Reviewed-on: https://chromium-review.googlesource.com/602628
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492115}