content/common/mac/app_nap_activity.mm
@@ -37,7 +37,8 @@ AppNapActivity::AppNapActivity() {
 };
 
 AppNapActivity::~AppNapActivity() {
-  DCHECK(!assertion_->obj.get());
+  if (assertion_->obj.get())
+    End();
 };
 
 void AppNapActivity::InitializeAppNapSupport() {
